--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-h5-template",
-  "version": "2.1.0",
-  "description": "A vue h5 template with Vant UI",
-  "author": "Sunnie <sunniejs@163.com>",
+  "name": "kd-cli-template",
+  "version": "1.0.0",
+  "description": "kd's vue mobile project template",
+  "author": "",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --open",
