--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "vant": "^2.10.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vxe-table": "^2.9.16",
+    "xe-utils": "^2.7.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
